refactor: DTOs atribute from entities modify